# engine-native

./: .gitignore  CMakeLists.txt
cmake/: predefine.cmake
cocos/application/: AbstractApplication.h  ApplicationManager.cpp  ApplicationManager.h  BaseApplication.h  CocosApplication.cpp  CocosApplication.h
cocos/audio/: AudioEngine.cpp
cocos/base/: Config.h  Log.cpp  Macros.h  Scheduler.h  StringUtil.cpp  TypeDef.h  UTF8.cpp  UTF8.h  ZipUtils.h
cocos/engine/: AbstractEngine.cpp  AbstractEngine.h  BaseEngine.cpp  BaseEngine.h  Engine.cpp  Engine.h  EngineManager.cpp  EngineManager.h  EngineObserver.h  EngineObserverManager.cpp  EngineObserverManager.h  EngineScheduler.h
cocos/main/: main-ios.mm  main.cpp  main.mm
cocos/network/: Downloader-curl.cpp  Downloader-curl.h  Downloader-java.cpp  HttpClient-apple.mm  HttpClient-java.cpp  HttpClient.cpp  HttpClient.h  SocketIO.cpp  WebSocket-libwebsockets.cpp  WebSocketServer.cpp
cocos/platform/: BasePlatform.cpp  BasePlatform.h  FileUtils.cpp  Image.cpp  StdC.h  UniversalPlatform.cpp  UniversalPlatform.h  WindowsPlatform.cpp  WindowsPlatform.h
cocos/platformex/: AbstractPlatform.cpp  AbstractPlatform.h  BasePlatform.cpp  BasePlatform.h  EventDispathchInterface.h  IEventDispathch.h  UniversalPlatform.cpp  UniversalPlatform.h  WindowPlatform.cpp  WindowPlatform.h  WindowsPlatform.cpp  WindowsPlatform.h
cocos/renderer/: GFXDeviceManager.h
cocos/scene/: Model.cpp  Model.h
extensions/assets-manager/: AssetsManagerEx.cpp  AsyncTaskPool.cpp  AsyncTaskPool.h
templates/: cocos2dx_files.json
templates/common/: CMakeLists.txt
templates/open-harmony/entry/src/main/cpp/: CMakeLists.txt  message_queue.h  plugin_manager.cpp  plugin_manager.h
templates/open-harmony/entry/src/main/cpp/add/: hello.cpp
templates/open-harmony/entry/src/main/cpp/common/: plugin_common.h
templates/open-harmony/entry/src/main/cpp/napi/: napi_init.cpp
templates/open-harmony/entry/src/main/cpp/render/: egl_core.cpp  egl_core.h  plugin_render.cpp  plugin_render.h
(+515 files in other folders)
